# example-servant-elm

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  stackage_snapshot.json
client/: BUILD.bazel
