
module(name = "example-elm", version = "0.1")


bazel_dep(name = "rules_proto", version = "4.0.0")

bazel_dep(name = "rules_haskell", version = "0.17")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_sh", version = "0.3.0")

bazel_dep(name = "aspect_rules_js", version = "1.31.0")
bazel_dep(name = "rules_nodejs", version = "5.8.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain() # use default node version

use_repo(node, "nodejs")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    data = ["//:package.json"],
    npm_package_lock = "//:package-lock.json",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")
